--- a/index.html
+++ b/index.html
@@ -112,11 +112,27 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Alazzab Store. All rights reserved.</p>
-        </div>
-    </footer>
+<footer>
+    <div class="container">
+        <p>&copy; 2024 Alazzab Store. All rights reserved.</p>
+    </div>
+</footer>
+
+<!-- مكتبة EmailJS -->
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script type="text/javascript">
+    (function() {
+        emailjs.init("18ygGgryRoGve-Tpw"); // معرف المستخدم
+    })();
+</script>
+
+<script src="scripts/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
 
