--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>متجر العزب</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- ربط ملف CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <!-- استدعاء Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
   <!-- Header Section -->
   <header class="header">
     <div class="img-wrapper">
+      <!-- استخدام الصورة الأصلية -->
       <img src="https://images.pexels.com/photos/271667/pexels-photo-271667.jpeg?cs=srgb&dl=pexels-pixabay-271667.jpg&fm=jpg" alt="Architecture Banner">
     </div>
     <div class="banner">
@@ -67,6 +70,8 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <!-- ربط ملف JavaScript -->
+  <script src="js/script.js"></script>
 </body>
 </html>
+
